// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule element-name configured with custom pattern smoketest 1`] = `
Array [
  Object {
    "errorCount": 3,
    "filePath": "test-files/rules/element-name.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": Object {
          "blacklist": Array [],
          "pattern": "^foo-\\\\w+$",
          "tagName": "spam-ham",
        },
        "line": 27,
        "message": "<spam-ham> is not a valid element name",
        "offset": 319,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "spam-ham",
        "severity": 2,
        "size": 8,
      },
      Object {
        "column": 2,
        "context": Object {
          "blacklist": Array [],
          "pattern": "^foo-\\\\w+$",
          "tagName": "foo",
        },
        "line": 30,
        "message": "<foo> is not a valid element name",
        "offset": 372,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "foo",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": Object {
          "blacklist": Array [],
          "pattern": "^foo-\\\\w+$",
          "tagName": "1-bar",
        },
        "line": 31,
        "message": "<1-bar> is not a valid element name",
        "offset": 384,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "1-bar",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<!-- builtin -->
<div></div>
<table>
	<thead>
		<tr>
			<th>foo</th>
			<th>bar</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td>1</td>
			<td>2</td>
		</tr>
		<tr>
			<td>3</td>
			<td>4</td>
		</tr>
	</tbody>
</table>

<!-- xml namespace -->
<xi:include></xi:include>

<!-- allowed custom names -->
<foo-bar></foo-bar>
<spam-ham></spam-ham>

<!-- invalid custom names -->
<foo></foo>
<1-bar></1-bar>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-name configured with default pattern smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/element-name.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": Object {
          "blacklist": Array [],
          "pattern": "^[a-z][a-z0-9\\\\-._]*-[a-z0-9\\\\-._]*$",
          "tagName": "foo",
        },
        "line": 30,
        "message": "<foo> is not a valid element name",
        "offset": 372,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "foo",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": Object {
          "blacklist": Array [],
          "pattern": "^[a-z][a-z0-9\\\\-._]*-[a-z0-9\\\\-._]*$",
          "tagName": "1-bar",
        },
        "line": 31,
        "message": "<1-bar> is not a valid element name",
        "offset": 384,
        "ruleId": "element-name",
        "ruleUrl": "https://html-validate.org/rules/element-name.html",
        "selector": "1-bar",
        "severity": 2,
        "size": 5,
      },
    ],
    "source": "<!-- builtin -->
<div></div>
<table>
	<thead>
		<tr>
			<th>foo</th>
			<th>bar</th>
		</tr>
	</thead>
	<tbody>
		<tr>
			<td>1</td>
			<td>2</td>
		</tr>
		<tr>
			<td>3</td>
			<td>4</td>
		</tr>
	</tbody>
</table>

<!-- xml namespace -->
<xi:include></xi:include>

<!-- allowed custom names -->
<foo-bar></foo-bar>
<spam-ham></spam-ham>

<!-- invalid custom names -->
<foo></foo>
<1-bar></1-bar>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-name should contain contextual documentation for blacklisted element 1`] = `
Object {
  "description": "<element-name> is blacklisted by the project configuration.

The following names are blacklisted:
- element-name",
  "url": "https://html-validate.org/rules/element-name.html",
}
`;

exports[`rule element-name should contain contextual documentation for element not matching custom pattern 1`] = `
Object {
  "description": "<element-name> is not a valid element name. This project is configured to only allow names matching the following regular expression:

- \`^foo-.+$\`",
  "url": "https://html-validate.org/rules/element-name.html",
}
`;

exports[`rule element-name should contain contextual documentation for element not matching default pattern 1`] = `
Object {
  "description": "<element-name> is not a valid element name. If this is a custom element HTML requires the name to follow these rules:

- The name must begin with \`a-z\`
- The name must include a hyphen \`-\`
- It may include alphanumerical characters \`a-z0-9\` or hyphens \`-\`, dots \`.\` or underscores \`_\`.",
  "url": "https://html-validate.org/rules/element-name.html",
}
`;

exports[`rule element-name should contain documentation 1`] = `
Object {
  "description": "This is not a valid element name.",
  "url": "https://html-validate.org/rules/element-name.html",
}
`;
